--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
 
     <target name="build">
         <mkdir dir="${build.dir}/classes"/>
-        <javac destdir="${build.dir}/classes" srcdir="src" classpathref="cp" debug="on"/>
+        <javac destdir="${build.dir}/classes" srcdir="src/main/java" classpathref="cp" debug="on"/>
         <jar destfile="${build.dir}/${project.name}.jar">
             <fileset dir="${build.dir}/classes"/>
         </jar>
