--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project default="build">
     <property name="build.dir" value="dist" />
     <property name="conf.dir" value="conf" />
-    <property name="project.name" value="hbase"/>
+    <property name="project.name" value="HBaseMonitor"/>
     <property name="machine.agent.jar" value="lib/machineagent/machineagent.jar"/>
     <property name="log.jar" value="lib/log4j/log4j-1.2.15.jar"/>
     <path id="cp">
@@ -12,13 +12,20 @@
     <target name="build">
         <mkdir dir="${build.dir}/classes"/>
         <javac destdir="${build.dir}/classes" srcdir="src/main/java" classpathref="cp" debug="on"/>
-        <jar destfile="${build.dir}/${project.name}.jar">
+        <mkdir dir="${build.dir}/HBaseMonitor"/>
+        <jar destfile="${build.dir}/HBaseMonitor/${project.name}.jar">
             <fileset dir="${build.dir}/classes"/>
         </jar>
-        <copy todir="${build.dir}/">
+        <copy todir="${build.dir}/HBaseMonitor">
             <fileset dir="${conf.dir}" includes="monitor.xml"/>
         </copy>
         <delete dir="${build.dir}/classes"/>
+    </target>
+    <target name="package" depends="build">
+        <zip destfile="${build.dir}/HBaseMonitor.zip">
+            <zipfileset dir="${build.dir}/HBaseMonitor" filemode="755" prefix="HBaseMonitor/"/>
+        </zip>
+        <delete dir="${build.dir}/HBaseMonitor"/>
     </target>
 
     <target name="clean">
