--- a/src/test/resources/conf/configMasterOnly.yaml
+++ b/src/test/resources/conf/configMasterOnly.yaml
@@ -9,9 +9,9 @@ metricPrefix: Custom Metrics|HBase
 
 # List of HBase Instances
 instances:
-   - displayName: "Local HBase"
-     host: "localhost"
-     port: 10101
+   - displayName:
+     host:
+     port:
      username:
      # Provide password or encryptedPassword
      password:
