--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -1,15 +1,16 @@
 ### ANY CHANGES TO THIS FILE DOES NOT REQUIRE A RESTART ###
 
 #This will create this metric in all the tiers, under this path
-metricPrefix: Custom Metrics|HBase
+#metricPrefix: Custom Metrics|HBase
 
 #This will create it in specific Tier/Component. Make sure to replace <COMPONENT_ID> with the appropriate one from your environment.
 #To find the <COMPONENT_ID> in your environment, please follow the screenshot https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
-#metricPrefix: Server|Component:<COMPONENT_ID>|Custom Metrics|HBase
+metricPrefix: Server|Component:<COMPONENT_ID>|Custom Metrics|HBase
 
 # List of HBase Instances
 instances:
    - displayName: "Local HBase"
+     serviceUrl: "" #"service:jmx:rmi:///jndi/rmi://127.0.0.1:10101/jmxrmi" #provide jmx service URL [OR] provide [host][port] pair
      host: "localhost"
      port: 10101
      username:
@@ -18,6 +19,7 @@ instances:
      encryptedPassword:
      regionServers:
        - displayName: "RegionServer1"
+         serviceUrl: ""
          host: "localhost"
          port: 10101
          username:
@@ -25,6 +27,7 @@ instances:
          password:
          encryptedPassword:
        - displayName: "RegionServer2"
+         serviceUrl: ""
          host: "localhost"
          port: 10101
          username:
@@ -37,80 +40,6 @@ encryptionKey:
 # number of concurrent tasks.
 # This doesn't need to be changed unless many instances are configured
 numberOfThreads: 10
-
-
-#                                      List of metrics
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#Glossary of terms(These terms are used as properties for each metric):
-#   alias
-#   aggregationType
-#   timeRollUpType
-#   clusterRollUpType                                                                                                                                                                                                                                                                                                                                                                                                                                                                            }
-#   multiplier -->not for derived metrics
-#   convert --> not for derived metrics
-#   delta --> not for derived metrics
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-# The configuration of different metrics from various mbeans of HBase server
-mbeans:
-   # Common mbeans which are applicable to both master and region server
-   common:
-      - objectName: "Hadoop:service=HBase,name=JvmMetrics"
-        metrics:
-            - MemHeapCommittedM:
-                 alias: "MemHeapCommittedM"
-            - MemHeapMaxM:
-                 alias: "MemHeapMaxM"
-
-   # Master specific mbeans
-   master:
-      # This mbean is to get cluster related metrics.
-      - objectName: "Hadoop:service=HBase,name=Master,sub=AssignmentManger"
-        metrics:
-            - BulkAssign_max:
-                 alias: "BulkAssign_max"
-            - Assign_max:
-                 alias: "Assign_max"
-
-      - objectName: "Hadoop:service=HBase,name=Master,sub=Server"
-        metrics:
-            - averageLoad:
-                 alias: "averageLoad"
-            - clusterRequests:
-                 alias: "clusterRequests"
-            - numDeadRegionServers:
-                 alias: "numDeadRegionServers"
-            - numRegionServers:
-                 alias: "numRegionServers"
-   # region server specific mbeans
-   regionServer:
-      - objectName: "Hadoop:service=HBase,name=RegionServer,sub=Server"
-        metrics:
-            - storeCount:
-                 alias: "storeCount"
-                 #delta : "true"
-                 multiplier : 100
-            - storeFileCount:
-                 alias: "storeFileCount"
-                 #delta : "true"
-            - storeFileIndexSize :
-                 alias: "storeFileIndexSize"
-      - objectName: "Hadoop:service=HBase,name=RegionServer,sub=IPC"
-        metrics:
-            - TotalCallTime_num_ops:
-                alias: "TotalCallTime_num_ops"
-            - exceptions:
-                alias: "exceptions"
-            - ProcessCallTime_num_ops:
-                alias: "ProcessCallTime_num_ops"
-      - objectName: "Hadoop:service=HBase,name=RegionServer,sub=WAL"
-        metrics:
-            - AppendSize_num_ops:
-                 alias: "AppendSize_num_ops"
-            - AppendSize_min:
-                 alias: "AppendSize_min"
-            - AppendSize_max:
-                 alias: "AppendSize_max"
 
 derivedMetrics:
     - derivedMetricPath: "Local HBase|RegionServer|Cluster|Server|storeCount"
