--- a/src/test/resources/conf/config.yml
+++ b/src/test/resources/conf/config.yml
@@ -1,16 +1,15 @@
-### ANY CHANGES TO THIS FILE DOES NOT REQUIRE A RESTART ###
-
-#This will create this metric in all the tiers, under this path
+# Use this only if SIM is enabled
 #metricPrefix: Custom Metrics|HBase
 
-#This will create it in specific Tier/Component. Make sure to replace <COMPONENT_ID> with the appropriate one from your environment.
-#To find the <COMPONENT_ID> in your environment, please follow the screenshot https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
+# If SIM is not enabled, then use this
 metricPrefix: Server|Component:<COMPONENT_ID>|Custom Metrics|HBase
+#To find the <COMPONENT_ID> in your environment,
+#please follow the screenshot https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
 
 # List of HBase Instances
-instances:
+servers:
    - displayName: "Local HBase"
-     serviceUrl: "" #"service:jmx:rmi:///jndi/rmi://127.0.0.1:10101/jmxrmi" #provide jmx service URL [OR] provide [host][port] pair
+     serviceUrl: ""           #"service:jmx:rmi:///jndi/rmi://127.0.0.1:10101/jmxrmi" #provide jmx service URL [OR] provide [host][port] pair
      host: "localhost"
      port: 10101
      username:
@@ -37,13 +36,29 @@ instances:
 
 encryptionKey:
 
-# number of concurrent tasks.
-# This doesn't need to be changed unless many instances are configured
-numberOfThreads: 10
+connection:
+  sslCertCheckEnabled: false
+  socketTimeout: 10000
+  connectTimeout: 10000
+
+ # For each server or regionServer you monitor, you need 1 thread per instance. If you have configured 1 server with 2 region servers, you will need a total of 3 threads.
+ # By default we want to support 3 servers with 2 regionServers for each, so it is 3 * 3 = 9 threads.
+numberOfThreads: 9
 
 derivedMetrics:
-    - derivedMetricPath: "Local HBase|RegionServer|Cluster|Server|storeCount"
-      formula: "Local HBase|RegionServer|{y}|Server|storeCount"
+    - derivedMetricPath: "Local HBase|RegionServer|Cluster|JvmMetrics|MemHeapMaxM"
+      formula: "Local HBase|RegionServer|{y}|JvmMetrics|MemHeapMaxM"
       aggregationType: “SUM"
       timeRollUpType: “SUM"
       clusterRollUpType: “COLLECTIVE”
+
+# Note: If the current "metricCharacterReplacer" is not working on your current machine,
+# please add escape charaters "\\" before your value. It changes from OS to OS, some need it, some don't
+# For Example, replace: "%" -> Becomes -> replace: "\\%"
+metricPathReplacements:
+   - replace: "%"
+     replaceWith: ""
+   - replace: ","
+     replaceWith: "-"
+   - replace: "."
+     replaceWith: "-"
