--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
             <version>2.4</version>
             <scope>provided</scope>
         </dependency>
+<!-- TODO use only one logger dependency based on commons    -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
